--- a/Hospital.ASP/Views/Account/Login.cshtml
+++ b/Hospital.ASP/Views/Account/Login.cshtml
@@ -1,24 +1,72 @@
 ﻿@model Patient
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
 
-<h2>Вход на сайт</h2>
- 
-<a asp-action="Register" asp-controller="Account">Регистрация</a>
- 
+
+<style>
+.custom-control-lg .custom-control-label::before,
+.custom-control-lg .custom-control-label::after {
+    top: 0.1rem;
+    left: -2rem;
+    width: 1.3rem;
+    height: 1.3rem;
+}
+
+.custom-control-lg .custom-control-label {
+    margin-left: 0.5rem;
+    font-size: 1rem;
+}
+
+</style>
+
 <form asp-action="Login" asp-controller="Account" asp-route-returnurl="@ViewData["ReturnUrl"]" asp-anti-forgery="true">
-    <div class="validation" asp-validation-summary="All"></div>
-    <div>
-        <div class="form-group">
-            <label asp-for="PhoneNumber">Введите номер телефона</label>
-            <input type="text" asp-for="PhoneNumber" />
-            <span asp-validation-for="PhoneNumber" />
-        </div>
-        <div class="form-group">
-            <label asp-for="PasswordHash">Введите пароль</label>
-            <input asp-for="PasswordHash" />
-            <span asp-validation-for="PasswordHash" />
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Войти" class="btn btn-outline-dark" />
+
+
+    <div class="d-flex justify-content-center">
+        <div class="card-body p-0 rounded shadow" style="max-width:40rem">
+            <div class="card-header text-center text-white bg-primary">Вход</div>
+            <div class="card-body">
+                <div class="validation" asp-validation-summary="ModelOnly"></div>
+                <div class="form-group">
+                    <label asp-for="PhoneNumber">Номер телефона</label>
+                    <div class="inner-addon left-addon">
+                        <i class="bi bi-telephone-fill"></i>
+                        <input type="tel" class="form-control " asp-for="PhoneNumber" required placeholder="введите номер телефона"
+                            data-val="true" data-val-required="номер телефона является обязательным"/>
+                        <span class="field-validation-valid" data-valmsg-for="PhoneNumber" data-valmsg-replace="true"></span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="PasswordHash">Пароль</label>
+                    <div class="inner-addon left-addon">
+                        <i class="bi bi-lock-fill"></i>
+                        <input class="form-control" 
+                                type="password"
+                                asp-for="PasswordHash" 
+                                required 
+                                name="password"
+                                data-val="true"
+                                data-val-required="пароль является обязательным"
+                                placeholder="введите пароль"/>
+                        <span class="field-validation-valid" data-valmsg-for="password" data-valmsg-replace="true"></span>
+                    </div>
+                </div>
+
+@*                <div class="form-group custom-control custom-checkbox custom-control-lg">
+                  <input type="checkbox" class="custom-control-input" checked name="stayIn" id="stayIn">
+                  <label class="custom-control-label" for="stayIn">Запомнить</label>
+                </div>
+*@
+                </div>
+
+            <div class="card-footer row m-0">
+                <a class="btn btn-outline-secondary col mr-4" asp-action="Register" asp-controller="Account">Регистрация</a>
+                <input type="submit" value="Войти" class="btn btn-primary col ml-4" />
+            </div>
+
         </div>
     </div>
 </form>
+
