--- a/Hospital.ASP/Views/_ViewImports.cshtml
+++ b/Hospital.ASP/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Hospital.Domain.Model
 @using Hospital.ViewModel
 @using Hospital.ASP
+@using Hospital.ASP.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
