--- a/Hospital.ASP/Views/Account/Login.cshtml
+++ b/Hospital.ASP/Views/Account/Login.cshtml
@@ -5,25 +5,24 @@
 
 
 <style>
-.custom-control-lg .custom-control-label::before,
-.custom-control-lg .custom-control-label::after {
-    top: 0.1rem;
-    left: -2rem;
-    width: 1.3rem;
-    height: 1.3rem;
-}
+    .custom-control-lg .custom-control-label::before,
+    .custom-control-lg .custom-control-label::after {
+        top: 0.1rem;
+        left: -2rem;
+        width: 1.3rem;
+        height: 1.3rem;
+    }
 
-.custom-control-lg .custom-control-label {
-    margin-left: 0.5rem;
-    font-size: 1rem;
+    .custom-control-lg .custom-control-label {
+        margin-left: 0.5rem;
+        font-size: 1rem;
 }
-
 </style>
 
 <form asp-action="Login" asp-controller="Account" asp-route-returnurl="@ViewData["ReturnUrl"]" asp-anti-forgery="true">
 
 
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center mt-3">
         <div class="card-body p-0 rounded shadow" style="max-width:40rem">
             <div class="card-header text-center text-white bg-primary">Вход</div>
             <div class="card-body">
@@ -32,7 +31,11 @@
                     <label asp-for="PhoneNumber">Номер телефона</label>
                     <div class="inner-addon left-addon">
                         <i class="bi bi-telephone-fill"></i>
-                        <input type="tel" class="form-control " asp-for="PhoneNumber" required placeholder="введите номер телефона"
+                        <input type="tel"
+                            class="form-control"
+                            asp-for="PhoneNumber"
+                            required
+                            placeholder="введите номер телефона"
                             data-val="true" data-val-required="номер телефона является обязательным"/>
                         <span class="field-validation-valid" data-valmsg-for="PhoneNumber" data-valmsg-replace="true"></span>
                     </div>
@@ -42,17 +45,16 @@
                     <label asp-for="PasswordHash">Пароль</label>
                     <div class="inner-addon left-addon">
                         <i class="bi bi-lock-fill"></i>
-                        <input class="form-control" 
-                                type="password"
-                                asp-for="PasswordHash" 
-                                required 
-                                name="password"
-                                data-val="true"
-                                data-val-required="пароль является обязательным"
-                                placeholder="введите пароль"/>
-                        <span class="field-validation-valid" data-valmsg-for="password" data-valmsg-replace="true"></span>
+                        <input type="password"
+                            asp-for="PasswordHash" required
+                            class="form-control"  
+                            data-val="true" data-val-required="пароль является обязательным"
+                            placeholder="введите пароль" />
+                        <span class="field-validation-valid" data-valmsg-for="PasswordHash" data-valmsg-replace="true"></span>
                     </div>
                 </div>
+                <input asp-for="FirstName" hidden value="Фамилия"/>
+        		<input asp-for="MidName" hidden value="Имя"/>
 
 @*                <div class="form-group custom-control custom-checkbox custom-control-lg">
                   <input type="checkbox" class="custom-control-input" checked name="stayIn" id="stayIn">
