--- a/Hospital.ASP/Views/Home/Index.cshtml
+++ b/Hospital.ASP/Views/Home/Index.cshtml
@@ -1,9 +1,49 @@
 ﻿@model RegistratorViewModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "One Clinic";
     Model.SearchString = "*";
     await Model.SearchPatient();
 }
+
+<div class="bd-example mt-3">
+  <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active">
+        <img class="d-block w-100" alt="First slide [1280x600]" src="~/images/test1_thb.jpg" data-holder-rendered="true">
+        <div class="carousel-caption text-right">
+          <h3>#СТОПCOVID-19</h3>
+          <p>Прояви интеллект</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" data-src="holder.js/1280x600?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="~/images/test2_thb.jpg" data-holder-rendered="true">
+        <div class="carousel-caption ">
+          <h3>#ДИСПАНСЕРИЗАЦИОВАН!</h3>
+          <p>Значит не боишься знать о себе все</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" data-src="holder.js/1280x600?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="~/images/test3_thb.jpg" data-holder-rendered="true">
+        <div class="carousel-caption ">
+          <h3>ПЕНСИОНЕРАМ СКИДКИ</h3>
+          <p>Успей, только сегодня!</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
