--- a/Hospital.ASP/Views/MedCard/Tests.cshtml
+++ b/Hospital.ASP/Views/MedCard/Tests.cshtml
@@ -6,9 +6,9 @@
 
 <div class="validation" asp-validation-summary="All"></div>
 
-<div class="d-flex flex-wrap" style="margin-inline: -0.5rem">
-    <div class="flex-fill mx-2">
-		<table class="table table-hover rounded shadow">
+<div class="d-flex flex-wrap" style="gap:10px;">
+    <div class="flex-fill">
+		<table class="table table-hover rounded shadow mb-0">
 			<thead class="thead-dark">
 				<tr>
 					<th>#</th>
@@ -40,17 +40,16 @@
 		</table>
     </div>
 
-	<div class="mx-2" style="max-width:25rem; display:none;" id="partialPlaceholder"/>
+	<div class="flex-fill" style="display:none;" id="partialPlaceholder"/>
 </div>  
 
 <script>
-    function getDetailContent(testDataId, editable) {
+    function getDetailContent(testDataId) {
         $.ajax({
             url: '@Url.Action("Details")',
             data: {
-				__RequestVerificationToken: gettoken(),
+				__RequestVerificationToken: getToken(),
 				testId: testDataId,
-				isEdit: editable,
 				},
             type: "POST",
             success: function(data) {
@@ -63,10 +62,4 @@
 	function closeDetail() {
 		$('#partialPlaceholder').hide();
 	}
-
-	function gettoken() {
-        var token = '@Html.AntiForgeryToken()';
-        token = $(token).val();
-        return token;
-    }
 </script>
