--- a/Hospital.ASP/Views/Appointment/_DoctorsPartial.cshtml
+++ b/Hospital.ASP/Views/Appointment/_DoctorsPartial.cshtml
@@ -1,32 +1,26 @@
 ﻿@model IEnumerable<Entry>
 
-@{
-}
-
-проверка удалась
-
-    <div>
-		<table class="table table-hover rounded shadow mb-0">
-			<thead class="thead-dark">
-				<tr>
-					<th>Доктор</th>
-					<th>Отделение</th>
-					<th>Адрес</th>
-					<th>Кабинет</th>
-					<th>Дата</th>
+<div class="table-responsive rounded shadow">
+	<table class="table table-hover m-0">
+		<thead class="thead-dark" >
+			<tr>
+				<th>Специалист</th>
+				<th>Адрес</th>
+				<th>Дата</th>
+			</tr>
+		</thead>
+		<tbody>
+			@foreach(Entry entry in Model)
+			{
+				<tr onclick="getEntries(@entry.DoctorDestination.Id, '@entry.TargetDateTime.ToShortDateString()')" style="cursor:pointer">
+					<td scope="row">
+						<span class="font-weight-bold">@entry.DoctorDestination.GetShortName()</span>
+						<br/>@entry.DoctorDestination.Department.Title.Caption
+					</td>
+					<td>@entry.DoctorDestination.Department.Adress.Street @entry.DoctorDestination.Department.Adress.Number</td>
+					<td>@entry.TargetDateTime.Date.ToLongDateString()</td>
 				</tr>
-			</thead>
-			<tbody>
-				@foreach(Entry data in Model)
-				{
-					<tr onclick="getDetailContent(@data.Id, false)" style="cursor:pointer">
-						<th scope="row">@data.DoctorDestination.GetShortName()</th>
-						<td>@data.DoctorDestination.Department.Title.Caption</td>
-						<td>@data.DoctorDestination.Department.Adress.Street @data.DoctorDestination.Department.Adress.Number</td>
-						<td>@data.DoctorDestination.Cabinet</td>
-						<td>@data.TargetDateTime.Date.ToLongDateString()</td>
-					</tr>
-				}
-			</tbody>
-		</table>
-    </div>
+			}
+		</tbody>
+	</table>
+</div>
