--- a/Hospital.ASP/Views/Shared/_Layout.cshtml
+++ b/Hospital.ASP/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
         </nav>
     </header>
     <div class="container" style="padding-right: 0; padding-left: 0;">
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
