Entries styling & paginator

--- a/Hospital.ASP/Views/Appointment/Index.cshtml
+++ b/Hospital.ASP/Views/Appointment/Index.cshtml
@@ -93,6 +93,7 @@
 			dataType: "html",
 			cache: false,
 			data: {
+				__RequestVerificationToken: getToken(),
 				doctorId: doctorId,
 				date: targetDateTime
 			},
@@ -104,4 +105,5 @@
 			}
 		});
 	}
+
 </script>
