--- a/Hospital.ASP/wwwroot/css/StyleSheet.css
+++ b/Hospital.ASP/wwwroot/css/StyleSheet.css
@@ -97,3 +97,7 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+.pointer{
+    cursor:pointer!important;
+}
