--- a/Hospital.ASP/Views/Appointment/Index.cshtml
+++ b/Hospital.ASP/Views/Appointment/Index.cshtml
@@ -7,17 +7,17 @@
 	padding-left: 0;
 	}
 
-    .custom-control-lg .custom-control-label::before,
-    .custom-control-lg .custom-control-label::after {
-        top: 0.1rem;
-        left: -2rem;
-        width: 1.3rem;
-        height: 1.3rem;
-    }
+	.custom-control-lg .custom-control-label::before,
+	.custom-control-lg .custom-control-label::after {
+		top: 0.1rem;
+		left: -2rem;
+		width: 1.3rem;
+		height: 1.3rem;
+	}
 
-    .custom-control-lg .custom-control-label {
-        margin-left: 0.5rem;
-        font-size: 1rem;
+	.custom-control-lg .custom-control-label {
+		margin-left: 0.5rem;
+		font-size: 1rem;
 	}
 </style>
 
@@ -65,9 +65,9 @@
 		$("#doctorsPartial").empty();
 		$("#entriesPartial").empty();
 
-        $.ajax({
-            url: '@Url.Action("DoctorsList", "Appointment")',
-            type: "post",
+		$.ajax({
+			url: '@Url.Action("DoctorsList", "Appointment")',
+			type: "post",
 			dataType: "html",
 			cache: false,
 			data: {
@@ -76,13 +76,13 @@
 				isFirstFree: document.getElementById('dateSwitch').checked, 
 				date: document.getElementById('dateField').value
 			},
-            success: function (result) {
-                $("#doctorsPartial").html(result);
-            },
+			success: function (result) {
+				$("#doctorsPartial").html(result);
+			},
 			error: function (XMLHttpRequest, textStatus, errorThrown) {
-				alert(textStatus);
+				alert(errorThrown);
 			}
-        });
+		});
 	}
 
 	function getEntries(doctorId, targetDateTime){
@@ -101,9 +101,12 @@
 				$("#entriesPartial").html(result);
 			},
 			error: function (XMLHttpRequest, textStatus, errorThrown) {
-				alert(textStatus);
+				alert(errorThrown);
 			}
 		});
+	}
+
+	function confirmEntry(entryId){
 	}
 
 </script>
