--- a/Hospital.ASP/Views/MedCard/_Navbar.cshtml
+++ b/Hospital.ASP/Views/MedCard/_Navbar.cshtml
@@ -17,7 +17,7 @@
                     asp-action="Tests">Процедуры</a>
             </li>
             <li class="nav-item p-0">
-                <a class="nav-link m-0 py-1 px-2 disabled
+                <a class="nav-link m-0 py-1 px-2
                         @Html.ActiveClass("MedCard","Entries","text-dark font-weight-bold")"
                     style="color: rgba(0,0,0,.5)"
                     asp-action="Entries">Записи</a>
