--- a/Hospital.ASP/Views/Appointment/_EntriesPartial.cshtml
+++ b/Hospital.ASP/Views/Appointment/_EntriesPartial.cshtml
@@ -103,7 +103,7 @@
 					}
 				</div>
 				<div class="modal-footer d-flex justify-content-between">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+					<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Закрыть</button>
 					<button type="button" id="confirmButton" class="btn btn-primary" onclick="confirmEntry(@curStaff.Id)">ЗАПИСАТЬ</button>
 				</div>
 			</div>
