deleting self-created entries

--- a/Hospital.ASP/Views/Appointment/_EntriesPartial.cshtml
+++ b/Hospital.ASP/Views/Appointment/_EntriesPartial.cshtml
@@ -126,10 +126,8 @@
 
 	function confirmEntry(doctorId){
 
-		alert(currentDateTime);
-
 		$.ajax({
-			url: '@Url.Action("ConfirmEntry", "Appointment")',
+			url: '@Url.Action("ConfirmEntry")',
 			type: "post",
 			dataType: "html",
 			cache: false,
