--- a/Hospital.ASP/Views/MedCard/Entries.cshtml
+++ b/Hospital.ASP/Views/MedCard/Entries.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Entry>
 
 @{
-	ViewData["Title"] = "Записи и заявки";
+	ViewData["Title"] = "Записи";
 	Layout = "_Navbar";
 }
 
@@ -13,45 +13,116 @@
 	}
 	else
 	{
-		<table class="table rounded shadow mb-0">
-			<thead class="thead-dark">
-				<tr>
-					<th>#</th>
-					<th>Дата/Время</th>
-					<th>Специалист</th>
-					<th>Адрес</th>
-					<th>Статус заявки</th>
-				</tr>
-			</thead>
-			<tbody>
-				@foreach(Entry entry in Model)
-				{
-					<tr class="@(entry.EntryStatus != EntryStatus.Ожидание ? "text-muted bg-light" : "")">
-						<th scope="row">@entry.Id</th>
-						<td>
-							<h5 class="p-0 m-0">@entry.TargetDateTime.ToShortTimeString()</h5>
-							<span class="text-muted">@entry.TargetDateTime.ToString("dd MMMM, ddd")</span>
-						</td>
-						<td>
-							<h6 class="p-0 m-0">@entry.DoctorDestination.GetShortName()</h6>
-							<span class="text-muted">@entry.DoctorDestination.Department.Title.Title</span>
-						</td>
-						<td>
-							@entry.DoctorDestination.Department.Adress.ToShortString(), 
-							кабинет: @entry.DoctorDestination.Cabinet
-						</td>
-						<td>
-							@entry.EntryStatus <br />
-							@if (entry.EntryStatus == EntryStatus.Ожидание)
-							{
-								<button class="btn btn-link m-0 p-0">(Отменить)</button>
-							}
-						</td>
+		<div class="table-responsive rounded shadow">
+			<table class="table mb-0">
+				<thead class="thead-dark">
+					<tr>
+						<th style="width: 5%">#</th>
+						<th style="width: 20%">Дата/Время</th>
+						<th style="width: 35%">Специалист</th>
+						<th style="width: 25%">Адрес</th>
+						<th style="width: 15%">Статус заявки</th>
 					</tr>
-				}
-			</tbody>
-		</table>
+				</thead>
+				<tbody>
+					@foreach(Entry entry in Model)
+					{
+						<tr id="tr_@entry.Id" class="@(entry.EntryStatus != EntryStatus.Ожидание ? "text-muted bg-light" : "")">
+							<th scope="row">@entry.Id</th>
+							<td>
+								<h5 class="p-0 m-0">@entry.TargetDateTime.ToShortTimeString()</h5>
+								<span class="text-muted">@entry.TargetDateTime.ToString("dd MMMM, ddd")</span>
+							</td>
+							<td>
+								<h6 class="p-0 m-0">@entry.DoctorDestination.GetShortName()</h6>
+								<span class="text-muted text-break">@entry.DoctorDestination.Department.Title.Title</span>
+							</td>
+							<td>
+								@entry.DoctorDestination.Department.Adress.ToShortString(), 
+								кабинет: @entry.DoctorDestination.Cabinet
+							</td>
+							<td>
+								@entry.EntryStatus <br />
+								@if (entry.InviteStatus == InviteStatus.Первичное && entry.EntryStatus == EntryStatus.Ожидание)
+								{
+									<button class="btn btn-link m-0 p-0" onclick="showDeleteConfirmModal(@entry.Id, '@entry.TargetDateTime.ToString("yyyy-MM-ddTHH:mm:ss")')">(Отменить)</button>
+								}
+								else
+								{
+									@entry.InviteStatus
+								}
+							</td>
+						</tr>
+					}
+				</tbody>
+			</table>
+		</div>
 
+		<div class="modal fade" id="deleteConfirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+
+					<div class="modal-body" style="font-size:1.2rem">
+						Вы действительно хотите отменить запись #<span id="entryId"></span> на <span id="date"></span> в <span id="time"></span>?
+					</div>
+					<div class="modal-footer p-2 d-flex justify-content-between">
+						<button type="button" class="btn btn-link text-secondary" data-dismiss="modal">Закрыть</button>
+						<button type="button" class="btn btn-link text-danger font-weight-bold" id="confirmButton" onclick="deleteEntry()" >Отменить</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal fade" id="responseModal" tabindex="-1" role="dialog" aria-labelledby="confirmLabel2" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+
+					<div class="modal-body" id="responseModalBody" style="font-size:1.2rem">
+					</div>
+					<div class="modal-footer p-2 d-flex justify-content-between">
+						<button type="button" class="btn btn-link text-secondary" data-dismiss="modal">Закрыть</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	}
 	
 </div>
+
+<script>
+	
+	var currentEntryId;
+
+	function showDeleteConfirmModal(entryId, dateTime){
+		currentDateTime = new Date(dateTime);
+		currentEntryId = entryId;
+		$("#entryId").html(entryId);
+		$("#date").html(currentDateTime.toLocaleDateString("ru-RU", {day: 'numeric', month:'2-digit', year:'2-digit'} ));
+		$("#time").html(currentDateTime.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'}));
+		$("#deleteConfirmModal").modal('show');
+	}
+
+	function deleteEntry(){
+		$("#deleteConfirmModal").modal('hide');
+		$.ajax({
+            url: '@Url.Action("RemoveEntry")',
+            data: {
+				__RequestVerificationToken: getToken(),
+				entryId: currentEntryId
+			},
+            type: "POST",
+			dataType:"html",
+			success: function (result) {
+				$("#tr_"+currentEntryId).remove();
+				$("#responseModalBody").html(result);
+				setTimeout(()=> {$("#responseModal").modal('show');},500);
+			},
+			error: function (XMLHttpRequest, textStatus, errorThrown) {
+				$("#responseModalBody").html(XMLHttpRequest.responseText);
+				setTimeout(()=> {$("#responseModal").modal('show');},500);
+			}
+		});
+	}
+
+
+</script>
